--- a/dialogform/templates/dialogform/form.html
+++ b/dialogform/templates/dialogform/form.html
@@ -10,7 +10,7 @@ dialogform_cssclass may be optionally set by views using DialogFormMixin
 {% endcomment %}
 
 <form method="{{ form.method|default:"post" }}" class="dialogform {{ dialogform_cssclass }}">
-  {% if form.method|lower == "post" %}{% csrf_token %}{% endif %}
+  {% csrf_token %}
   {% if form.render_as == "table" %}<table>{% endif %}
   {{ form.as_render_as }}
   {% if form.render_as == "table" %}</table>{% endif %}
